bk_ida/gccida/c0/dump_maybe_newline
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_maybe_newline/src/tree-dump.c:626:44: error: use of undeclared identifier 'arg0'
fprintf( di_0->stream, "%*s", 15 - extra, &arg0); 
                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_maybe_newline/src/obj/tree-dump.o] Error 1
